# near-sandbox

./: .env.example  .gitignore  README.md  example.txt  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
__tests__/: kdf-signer-canhazgas-contract.test.ts  kdf.test.ts
app/: Home.tsx  layout.tsx  page.tsx
app/constants/: chains.ts
app/multi-chain/: page.tsx
app/near/: page.tsx
app/nft-keys/: layout.tsx  page.tsx
app/passkeys/: page.tsx
components/: Button.tsx  Header.tsx  Input.tsx  Label.tsx  Link.tsx  Loader.tsx  Select.tsx
config/: near.ts
constants/: chains.ts
contracts/: Cargo.toml
contracts/bridge/: Cargo.toml
contracts/bridge-contract/: Cargo.toml
contracts/bridge-contract/src/: btc.rs  eth.rs  evm.rs  krnl.rs  lib.rs  sign.rs  signer.rs  swap.rs  swap_krnl.rs
contracts/bridge/src/: btc.rs  lib.rs  signer.rs  swap.rs
frontend/: .env.example  README.md  components.json  global.d.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: Header.tsx
frontend/constants/: cex.ts  chains.ts
frontend/contracts/: constants.ts  types.ts
frontend/hooks/: useAccountBalance.ts  useChainSignaturesContracts.ts  useChains.tsx  useCopy.tsx  useEnv.ts  (+4 more)
hooks/: useAccountBalance.ts  useChains.tsx  useDeriveAddressAndPublicKey.ts  useEnv.ts  useEnvVariables.ts  useInitNear.ts  useMultiChainTransaction.tsx  useMultiChainWalletTransaction.tsx
lib/: canonicalize.ts
providers/: AuthProvider.tsx  ReactQueryProvider.tsx  Toast.tsx  WalletAuthProvider.tsx
types/: contracts.ts  transaction.ts
utils/: Ethereum.ts  balance.ts  canonicalize.ts  contracts.ts  etherium.ts  kdf.ts  keys.ts  near.ts  payload.ts
(+113 files in other folders)
