[workspace]
members = [
  "bridge-contract",
]

[workspace.dependencies]
near-sdk = "5.6.0"
borsh = "1.5.3"
schemars = "0.8.21"
serde_json = "1.0.133"
omni-transaction = "0.1.1"
hex = "0.4.3"
serde = "1.0.216"
sha2 = "0.10.8"
ethers-core = "2.0.14"
sha256 = "1.5.0"
ethabi = "18.0.0"
k256 = "0.13.4"
sha3 = "0.10.8"
alloy-primitives = "0.8.15"