[package]
name = "bridge-contract"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/<xxx>/<xxx>"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.10.1-rust-1.82.0"
image_digest = "sha256:48206ab74c774cb03394ef84f0c5e0b458a071331164b5da853de06f3510cbf8"
passed_env = []
container_build_command = ["cargo", "near", "build"]

[dependencies]
near-sdk = {workspace = true}
omni-transaction = {workspace = true}
hex = {workspace = true}
serde = {workspace = true}
borsh = {workspace = true}
schemars = {workspace = true}
sha2 = {workspace = true}
ethabi = {workspace = true}
k256 = {workspace = true}
sha3 = {workspace = true}
serde_json = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["custom"] }

[dev-dependencies]
near-sdk = { version = "5.6.0", features = ["unit-testing"] }
near-workspaces = { version = "0.15.0", features = ["unstable"] }
tokio = { version = "1.42.0", features = ["full"] }
serde_json = "1.0.133"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
